JAVA-18131 Upgrade core-java-modules to JDK 11